# tree-sitter-liotree

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  scanner.c  setup.py  tree-sitter.json
bindings/c/: tree-sitter-liotree.pc.in
bindings/c/tree_sitter/: tree-sitter-liotree.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_liotree/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLioTreeTests/: TreeSitterLioTreeTests.swift
queries/liotree/: folds.scm  highlights.scm  highlights.scm.old
src/: grammar.json  node-types.json  parser.c
